--- a/305_a4.Rmd
+++ b/305_a4.Rmd
@@ -38,6 +38,7 @@ These are the variables in our experiment:
 - **E**: Batch 
 The response variable in this experiment is ceramic strength (a continuous measurement). We are interested in determining which main effects and interactions have a significant influence on the ceramic strength, and estimating the magnitude and direction of these effects.
 
+\newpage
 # Data Analysis
 The dataset used here is a simplified version of the *CERAMIC.DAT* dataset from NIST. The original dataset CERAMIC.DAT is from the website:  https://www.itl.nist.gov/div898/handbook/datasets/CERAMIC.DAT. We only selected 16 runs and used only the main 5 factors with coded levels (-1, +1), along with a single response variable (ceramic strength). The goal of doing this is to focus on factorial analysis rather than data pre-processing, and the structure remains representative of a full \(2^5\) factorial experiment.
 
@@ -92,11 +93,13 @@ The bar chart above shows each factor and interaction's contribution to the tota
 
 The half-normal plot graphically identifies potentially significant effects by highlighting those which deviate from the linear trend. Here, Factor A (Table Speed) is most clearly distinguished, along with D (Direction) and E (Batch), which both sit away from the line, indicating that they have genuine, non-random effects on ceramic strength. Effects near the line, like C and B, will be due to noise and not be statistically significant. This plot reinforces the notion that there are only a handful of factors that are really important — in keeping with the effect sparsity principle.
 
+\newpage
 # Conclusions
 
-From the analysis above, we can conclude that the main effect A (Table Speed) and C (Wheel Grit) are significant to ceramic strength, the interaction term AC may also have a non-negligible effect. In the Lenth's half-normal plot, it suggests a small number of effect dominate, which is consistent with the effect sparsity principle. Overall, this analysis demonstrates the factorial design is useful in identifying the effect of key factors and interactions in critical material property. 
+The findings of the research through the factorial experiment identify the Table Speed (Factor A) as the most influential factor on the strength of ceramic, as indicated by both the ANOVA sum of squares and the half-normal plot. It is the variability contributor with the largest magnitude and the farthest from the reference line in the Daniel plot, thus qualifying it as strong evidence of its non-random effect.
 
+Direction (Factor D) and Wheel Grit (Factor C) also have moderate effects with D having higher sum of squares and C more distant from the center in the half-normal plot. Although Feed Rate (B) and Batch (E) are seen on both plots, the effects are minimal and imply minimal practical importance. The interaction A:B is noteworthy in that the interaction of Table Speed and Feed Rate plays a role in the response aside from their own individual effects.
 
+These conclusions agree with the effect sparsity principle, under which a few major factors control the response. The half-normal plot also agrees with this by distinguishing major effects from randomness visually.
 
-
-
+In general, this analysis solidifies the notion that factorial design is a highly useful tool for determination of powerful factors in large systems. In addition to partitioning out the effect of one factor, it even detects interaction effects that are lost in single-factor-at-a-time experiments. This reduced-size, simulated equivalent of the true CERAMIC.DAT data set remains sophisticated enough to illustrate the usefulness of this methodology.
